--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pinia": "^2.0.35",
     "vue": "^3.2.47",
     "vue-axios": "^3.5.2",
+    "vue-picture-cropper": "^0.6.1",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
