--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "element-plus": "^2.3.6",
+    "element-plus": "^2.3.7",
     "pinia": "^2.1.4",
     "vue": "^3.3.4",
     "vue-axios": "^3.5.2",
     "vue-picture-cropper": "^0.6.1",
-    "vue-router": "^4.2.2"
+    "vue-router": "^4.2.2",
+    "vue3-emoji": "^2.0.0"
   },
   "devDependencies": {
-    "@iconify/json": "^2.2.80",
+    "@iconify/json": "^2.2.83",
     "@iconify/vue": "^4.1.1",
     "@tsconfig/node18": "^2.0.1",
     "@types/mockjs": "^1.0.7",
@@ -30,6 +31,6 @@
     "npm-run-all": "^4.1.5",
     "typescript": "~5.0.4",
     "vite": "^4.3.9",
-    "vue-tsc": "^1.8.1"
+    "vue-tsc": "^1.8.2"
   }
 }
