--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "element-plus": "^2.3.7",
     "pinia": "^2.1.4",
+    "pinia-plugin-persist": "^1.0.0",
     "vue": "^3.3.4",
     "vue-axios": "^3.5.2",
     "vue-picture-cropper": "^0.6.1",
@@ -30,6 +31,8 @@
     "mockjs": "^1.1.0",
     "npm-run-all": "^4.1.5",
     "typescript": "~5.0.4",
+    "unplugin-auto-import": "^0.17.1",
+    "unplugin-vue-components": "^0.25.2",
     "vite": "^4.3.9",
     "vue-tsc": "^1.8.2"
   }
